--- a/index.html
+++ b/index.html
@@ -14,42 +14,44 @@
 
 <body>
     <header>
-        <div class="navContainer">
-            <nav class="navBar">
-                <div class="topBar grid-3">
-                    <figure class="logoImage">
-                        <img src="./assets/images/navLogo.png" alt="Logo Image">
-                    </figure>
+        <div class="header">
+            <div class="navContainer">
+                <nav class="navBar">
+                    <div class="topBar grid-3">
+                        <figure class="logoImage">
+                            <img src="./assets/images/navLogo.png" alt="Logo Image">
+                        </figure>
 
-                    <div class="navLinksContainer d-flex-start">
-                        <ul class="navLinks d-flexNav">
-                            <li><a href="#">Who we are <i class="fa-solid fa-angle-down"></i></a></li>
-                            <li><a href="#">Our Impact <i class="fa-solid fa-angle-down"></i></a></li>
-                            <li><a href="#">Our Brands </a></li>
-                            <li><a href="#">Our Stories </a></li>
-                            <li><a href="#">Resources <i class="fa-solid fa-angle-down"></i></a></li>
-                        </ul>
+                        <div class="navLinksContainer d-flex-start">
+                            <ul class="navLinks d-flexNav">
+                                <li><a href="#">Who we are <i class="fa-solid fa-angle-down"></i></a></li>
+                                <li><a href="#">Our Impact <i class="fa-solid fa-angle-down"></i></a></li>
+                                <li><a href="#">Our Brands </a></li>
+                                <li><a href="#">Our Stories </a></li>
+                                <li><a href="#">Resources <i class="fa-solid fa-angle-down"></i></a></li>
+                            </ul>
+                        </div>
+
+                        <div class="searchContainer d-flex-end">
+                            <ul class="search d-flexNav">
+                                <li><a href="#">Contact</a></li>
+                                <li><a href="#" class="global"><i class="fa-solid fa-globe"></i>India</a></li>
+                                <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                            </ul>
+                        </div>
                     </div>
+                </nav>
+            </div>
 
-                    <div class="searchContainer d-flex-end">
-                        <ul class="search d-flexNav">
-                            <li><a href="#">Contact</a></li>
-                            <li><a href="#" class="global"><i class="fa-solid fa-globe"></i>India</a></li>
-                            <li><i class="fa-solid fa-magnifying-glass"></i></li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-        </div>
+            <!-- nav end -->
 
-        <!-- nav end -->
-
-         <!-- hero section -->
-         <div class="heroContainer">
-            <div class="heroSection">
-                <div class="heroBody grid-1">
-                    <div class="jumbotron d-flex">
-                        <h1>Create more <span> smiles </span> with every sip and every bite</h1>
+            <!-- hero section -->
+            <div class="heroContainer">
+                <div class="heroSection">
+                    <div class="heroBody grid-1">
+                        <div class="jumbotron d-flex">
+                            <h1>Create more <span> smiles </span> with every sip and every bite</h1>
+                        </div>
                     </div>
                 </div>
             </div>
